fixed broken css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,9 @@
-
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
+
 
 body {
     background-color: #d9dcd6;
@@ -76,6 +76,7 @@ section {
     display: inline-block;
     margin-left: 20px;
 }
+
 /*changed div to aside because it's going to the right-hand side of page*/
 aside {
     margin-right: 20px;
@@ -88,8 +89,8 @@ aside {
     background-color: #2589bd;
 }
 
-.search-engine-optimization
-.online-reputation-management
+.search-engine-optimization,
+.online-reputation-management,
 .social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
@@ -99,14 +100,14 @@ aside {
     color: #ffffff;
 }
 
-.search-engine-optimization img 
-.online-reputation-management img
+.search-engine-optimization img,
+.online-reputation-management img,
 .social-media-marketing img {
     max-height: 200px;
 }
 
-.search-engine-optimization h2 
-.online-reputation-management h2 
+.search-engine-optimization h2,
+.online-reputation-management h2,
 .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
@@ -124,14 +125,14 @@ aside {
 
 
 .benefit-lead h3,
-.benefit-brand h3
+.benefit-brand h3,
 .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-lead img 
-.benefit-brand img 
+.benefit-lead img,
+.benefit-brand img,
 .benefit-cost img {
     display: block;
     margin: 10px auto;
@@ -149,6 +150,7 @@ footer {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
+
 /*changed font size of footer to h3 to follow the flow*/
 footer h3 {
     font-size: 20px;
